<?xml version="1.0" encoding="utf-8"?>

<layout >
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".activity.register.RegisterActivity">



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            >

            <TextView
                android:id="@+id/txt_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/singup"
                android:textColor="@color/secondary"
                android:textSize="33sp"
                android:fontFamily="@font/fira_sans_semi_bold_italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="40dp"/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/secondary"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:errorEnabled="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:boxStrokeColor="@color/secondary"
                app:layout_constraintTop_toBottomOf="@+id/txt_register"
                android:layout_marginTop="30dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:maxLength="20"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:textSize="15sp"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:hintTextColor="@color/secondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:boxStrokeColor="@color/secondary"
                app:layout_constraintTop_toBottomOf="@+id/textFieldFullName"
                android:layout_marginTop="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:maxLength="20"
                    android:inputType="text"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:textSize="15sp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:hintTextColor="@color/secondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:boxStrokeColor="@color/secondary"
                app:layout_constraintTop_toBottomOf="@+id/textFieldUsername"
                android:layout_marginTop="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:maxLength="40"
                    android:inputType="textEmailAddress"
                    android:drawableStart="@drawable/ic_baseline_email_24"

                    android:textSize="15sp"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:hintTextColor="@color/secondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:boxStrokeColor="@color/secondary"
                app:layout_constraintTop_toBottomOf="@+id/textFieldEmail"
                android:layout_marginTop="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:maxLength="20"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:textSize="15sp"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldPassConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/secondary"
                app:errorEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:boxStrokeColor="@color/secondary"
                app:layout_constraintTop_toBottomOf="@+id/textFieldPass"
                android:layout_marginTop="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPasswordConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:maxLength="20"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:textSize="15sp"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegister"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:text="@string/singup"
                android:textAllCaps="false"
                android:layout_marginTop="20dp"
                app:cornerRadius="15dp"
                android:fontFamily="@font/fira_sans_extra_bold"
                android:backgroundTint="@color/secondary"
                app:layout_constraintEnd_toEndOf="@+id/textFieldUsername"
                app:layout_constraintStart_toStartOf="@+id/textFieldUsername"
                app:layout_constraintTop_toBottomOf="@+id/textFieldPassConfirm" />



            <TextView
                android:id="@+id/txt_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:textSize="15sp"
                android:textColor="@color/light_black"
                android:fontFamily="@font/fira_sans_semi_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnRegister"
                android:layout_marginTop="5dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                app:layout_constraintStart_toStartOf="@+id/txt_login"
                app:layout_constraintEnd_toEndOf="@+id/txt_login"
                app:layout_constraintTop_toBottomOf="@+id/txt_login"
                />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:indeterminateTint="@color/secondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"/>




        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>

