<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".activity.post.AddPostActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_const"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <ImageView
                android:id="@+id/icon_back"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                 />

            <TextView
                android:id="@+id/txt_create_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_post"
                android:layout_marginStart="15dp"
                android:textSize="16sp"
                android:fontFamily="@font/fira_sans_bold_italic"
                android:textColor="@color/medium_black"
                app:layout_constraintStart_toEndOf="@+id/icon_back"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_post"
                android:layout_width="70dp"
                android:layout_height="42dp"
                android:backgroundTint="@color/secondary"
                android:fontFamily="@font/fira_sans_bold_italic"
                android:text="Post"
                android:textAllCaps="false"
                android:textSize="13sp"
                app:cornerRadius="6dp"
                android:elevation="2dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_const"
            android:elevation="1dp"
            android:background="@color/grey"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/default_pic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line" />

        <TextView
            android:id="@+id/txt_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fira_sans_bold"
            android:text="@string/username"
            android:textColor="@color/medium_black"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="@+id/img_profile"
            app:layout_constraintBottom_toBottomOf="@+id/img_profile"
            app:layout_constraintStart_toEndOf="@+id/img_profile"
            android:layout_marginStart="10dp"/>

        <ImageView
            android:id="@+id/icon_add_post"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/add_image"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/img_profile"
            app:layout_constraintTop_toTopOf="@+id/img_profile"
            />


        <EditText
            android:id="@+id/edt_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/txt_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColorHint="@color/grey"
            android:background="@color/background"
            android:hint="@string/what_s_on_your_mind"/>

        <ImageView
            android:id="@+id/post_pic"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:adjustViewBounds="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_post" />

        <ImageView
            android:id="@+id/icon_cancel"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:visibility="gone"
            android:src="@drawable/ic_baseline_cancel_24"
            app:layout_constraintEnd_toEndOf="@+id/post_pic"
            app:layout_constraintTop_toTopOf="@+id/post_pic"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:indeterminateTint="@color/secondary"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
