<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activity.profile.ProfileActivity">


    <ImageView
        android:id="@+id/icon_back"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_profile"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/default_pic"
        app:civ_border_color="@color/secondary"
        app:civ_border_width="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon_back" />

    <ImageView
        android:id="@+id/icon_cam"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/rounded_bg"
        android:src="@drawable/camera"
        app:layout_constraintBottom_toBottomOf="@+id/img_profile"
        app:layout_constraintEnd_toEndOf="@+id/img_profile" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:indeterminateTint="@color/secondary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/img_profile"
        app:layout_constraintEnd_toEndOf="@+id/img_profile"
        app:layout_constraintStart_toStartOf="@+id/img_profile"
        app:layout_constraintTop_toTopOf="@+id/img_profile" />


    <TextView
        android:id="@+id/txt_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/fira_sans_bold"
        android:text="@string/username"
        android:textColor="@color/medium_black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/img_profile"
        app:layout_constraintStart_toStartOf="@+id/img_profile"
        app:layout_constraintTop_toBottomOf="@+id/icon_cam" />


    <TextView
        android:id="@+id/txtPosts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:fontFamily="@font/fira_sans_medium"
        android:text="Posts"
        android:layout_marginTop="20dp"
        android:textColor="@color/medium_black"
        app:layout_constraintBottom_toBottomOf="@+id/img_profile"
        app:layout_constraintStart_toEndOf="@+id/img_profile"
        app:layout_constraintTop_toTopOf="@+id/img_profile" />

    <TextView
        android:id="@+id/CountPosts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fira_sans_medium"
        android:text="50"
        android:textColor="@color/medium_black"
        app:layout_constraintBottom_toTopOf="@+id/txtPosts"
        app:layout_constraintEnd_toEndOf="@+id/txtPosts"
        app:layout_constraintStart_toStartOf="@+id/txtPosts" />

    <TextView
        android:id="@+id/txtFollowers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fira_sans_medium"
        android:text="Followers"
        android:layout_marginTop="20dp"
        android:textColor="@color/medium_black"
        app:layout_constraintBottom_toBottomOf="@+id/img_profile"
        app:layout_constraintEnd_toStartOf="@+id/txtFollowing"
        app:layout_constraintStart_toEndOf="@+id/txtPosts"
        app:layout_constraintTop_toTopOf="@+id/img_profile" />

    <TextView
        android:id="@+id/CountFollowers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fira_sans_medium"
        android:text="50"
        android:textColor="@color/medium_black"
        app:layout_constraintBottom_toTopOf="@+id/txtFollowers"
        app:layout_constraintEnd_toEndOf="@+id/txtFollowers"
        app:layout_constraintStart_toStartOf="@+id/txtFollowers" />

    <TextView
        android:id="@+id/txtFollowing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fira_sans_medium"
        android:text="Following"
        android:layout_marginTop="20dp"
        android:textColor="@color/medium_black"
        app:layout_constraintBottom_toBottomOf="@+id/img_profile"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_profile" />


    <TextView
        android:id="@+id/CountFollowing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fira_sans_medium"
        android:text="50"
        android:textColor="@color/medium_black"
        app:layout_constraintBottom_toTopOf="@+id/txtFollowing"
        app:layout_constraintEnd_toEndOf="@+id/txtFollowing"
        app:layout_constraintStart_toStartOf="@+id/txtFollowing" />


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_username"
        app:tabGravity="fill"
        app:tabIconTint="@animator/color_selected"
        app:tabIndicatorColor="@color/secondary"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@color/secondary"
        app:tabTextAppearance="@style/MyTabLayoutTextAppearance"
        app:tabTextColor="@color/medium_black">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/posts" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about" />

    </com.google.android.material.tabs.TabLayout>


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/profileVPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout"></androidx.viewpager2.widget.ViewPager2>


</androidx.constraintlayout.widget.ConstraintLayout>